--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina inutil .-.</title>
+    <title>Kh4lli</title>
     <!--Icone-->
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
@@ -13,6 +13,7 @@
 </head>
 
 <body onload="carregar()">
+    <div class="bg"></div>
     <!-- Mensagem de erro caso display de hora e data dar errado -->
     <div id="msg">
         Algo de errado!
@@ -20,33 +21,21 @@
     <div id="msg2">
         Algo de errado,msg2
     </div>
-    <style>
-        body, html {
-            height: 100%;
-        }
 
-        body {
-            background-image: url('./media/background.jpg');
-            height: 97%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    </style>
-    <h1>Bem Vindo(a) a uma página inútil!</h1>
-    <h2>Não espere algo de legal aqui!</h2>
+    <h1>Bem Vindo(a)</h1>
+    <h2>Apenas um lugar p compartilhar sobre mim</h2>
+
     <nav>
-        <p><a href="calculadora.html" target="blank">Calculadora</a> com JavaScript!!</p>
-        <p><a href="velocidade.html" target="blank">Script</a> para testar velocidade e multar vagabundo contra a lei   '-'</p>
-        <p><a href="idade.html" target="blank">Verificador</a> de idade</p>
+        <p><a href="./html/aboutme.html">About me</a></p>
+        <p><a href="./html/calculadora.html">Calculadora</a></p>
+        <p><a target="_blank" href="https://github.com/Hypxwghost">Github</a></p>
+        <!-- <p><a href="velocidade.html" target="blank">Script</a> para testar velocidade e multar vagabundo contra a lei   '-'</p> -->
+        <!-- <p><a href="idade.html" target="blank">Verificador</a> de idade</p> -->
         <p><a href="./ghosteagency/index.html">Ghoste Agency</a></p>
-        <p><a href="https://www.pexels.com/@stywo?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="blank">Autor</a> da <a href="https://www.pexels.com/photo/snow-capped-mountains-under-the-cloudy-skies-1054289/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels" target="blank">Imagem</a>,em<a href="https://www.pexels.com/" target="blank"> Pexels</a></p>
     </nav>
-    <script src="script.js"></script>
-    <footer id="rodape">
-        <p>Copyright &copy; 2020 - by "Ghoste Hypxw"<br>
-        <a href="https://github.com/Hypxwghost" target="blank">Github</a></p>
-    </footer>
+
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
