--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <nav>
         <p><a href="./html/aboutme.html">About me</a></p>
+        <p><a href="./html/contatos.html">Contatos</a></p>
         <p><a href="./html/calculadora.html">Calculadora</a></p>
         <p><a target="_blank" href="https://github.com/Hypxwghost">Github</a></p>
         <!-- <p><a href="velocidade.html" target="blank">Script</a> para testar velocidade e multar vagabundo contra a lei   '-'</p> -->
