Adição de mais imagens, backgrounds, mais contatos

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <!-- Seção about me e background -->
-    <div class="bg"></div>
+    <div class="bgka521"></div>
+    <img src="../media/frry.jpg">
+    <img src="../media/kamov.jpg" alt="">
     <div class="aboutme">
         <h1>About Me</h1>
         <p>AKA Khalli <span id="idade">a</span> yo <br>Ponta Grossa - PR <br> Furry :3 </p>
@@ -20,6 +22,7 @@
         <li>Gaming (Arma 3, Arma Reforger)</li>
         <li>Programming (Python, C#)</li>
         <li>Anything related to tech</li>
+        <li><a href="https://pt.wikipedia.org/wiki/Kamov_Ka-50">Kamov KA-52 "Alligator"</a> Attack Heli</li>
         <li>Music</li>
     </ul>
 
