--- a/html/contatos.html
+++ b/html/contatos.html
@@ -14,6 +14,10 @@
         <li>GitHub: <a target="_blank" href="https://github.com/Hypxwghost">Hypxwghost</a></li>
         <li>Discord: Khall1</li>
         <li>Email: <a href="mailto:hypxwghoste@gmail.com">hypxwghoste@gmail.com</a></li>
+		<li>Twitter: <a target="_blank" href="https://x.com/GhosteHypxw">@GhosteHypxw</a></li>
+		<li>Steam: <a target="_blank" href="https://steamcommunity.com/profiles/76561198829838074/">Khalli</a></li>
+		<li>Bluesky: <a target="_blank" href="https://bsky.app/profile/kh4lli.bsky.social">Khalli</a></li>
+		<li>Instagram: <a target="_blank" href="https://www.instagram.com/ghoste_hypxw/">Khalli</a></li>
     </ul>
 
 	<p><a href="../index.html">Menu</a></p>
