pagina p ka52, estilização e renomeação de arquivo css

--- a/html/ka52.html
+++ b/html/ka52.html
@@ -3,8 +3,41 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<title>KA-52</title>
 </head>
 <body>
+	<div class="bgka522"></div>
+
+	<div id="kamov">
+		<h1>Kamov Ka-52 "Alligator"</h1>
+		<h2>Overview</h2>
+		<p>The Kamov Ka-52 "Alligator" is a Russian attack helicopter developed by the Kamov Design Bureau. It is a twin-seat variant of the Ka-50 "Black Shark" and is designed for reconnaissance and combat missions. The Ka-52 features a distinctive coaxial rotor system, which provides enhanced maneuverability and stability.</p>
+		
+		<h2>Features</h2>
+		<p>The Ka-52 is equipped with advanced avionics, including a digital glass cockpit, night vision systems, and a sophisticated targeting system. Its coaxial rotor design eliminates the need for a tail rotor, allowing for greater agility and reduced vulnerability to enemy fire. The helicopter is also capable of operating in adverse weather conditions and at night.</p>
+		
+		<h2>Specifications</h2>
+		<ul>
+			<li><strong>Role:</strong> Attack Helicopter</li>
+			<li><strong>Manufacturer:</strong> Kamov</li>
+			<li><strong>First Flight:</strong> 1997</li>
+			<li><strong>Crew:</strong> 2 (pilot and co-pilot)</li>
+			<li><strong>Length:</strong> 16 meters</li>
+			<li><strong>Width:</strong> 7.3 meters</li>
+			<li><strong>Height:</strong> 4.95 meters</li>
+			<li><strong>Engine:</strong>2x Klimov VK-2500 turboshaft</li>
+			<li><strong>Power Output:</strong> 2x 2.400 hp during take-off ; 2x 2.700 hp in emergency mode and 2x 1.750 hp in cruise mode</li>
+			<li><strong>Maximum Speed:</strong> 300 km/h</li>
+			<li><strong>Range:</strong> 460 km</li>
+			<li><strong>Armament:</strong> 30mm 2A42 in NPPU-80 mount with 460 rounds,<br> 6x hardpoint on stub wings which can be equipped with S8, s13 rocket pods, 9K121 Vikhr , 9K120 Ataka-V ATMGs, UPK-23 Gun pod, R-73, 9K38 Igla-V IR AAMs,  Kh-25ML Laser guided AGM and  KMGU-2 dispenser for submunitions. </li>
+			<li><strong>Avionics:</strong>FH01 Arbalet MMW radar, GOES-451 optronic system, L-370 Vitebsk DIRCM and 4x UV-26 launcher</li>
+		</ul>
+		
+		<h2>Operational History</h2>
+		<p>The Ka-52 has been deployed in various military operations, including the Syrian Civil War and the conflict in Ukraine. It has proven to be an effective platform for close air support, reconnaissance, and anti-armor missions. The helicopter continues to be a key asset in the Russian military's arsenal.</p>
+		<p>Source: <a href="https://pt.wikipedia.org/wiki/Kamov_Ka-50">wikipedia</a>;<a href="https://weaponsystems.net/system/494-Kamov+Ka-52+Alligator">weaponsystems</a></p>
+	</div>
+	<p><a href="../index.html">Menu</a></p>
 </body>
 </html>
