--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
     
-    <link rel="stylesheet" type="text/css" href="css/estilo2.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body onload="carregar()">
