--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/estilo2.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 	<title>About Me</title>
 </head>
 <body>
@@ -22,10 +22,9 @@
         <li>Gaming (Arma 3, Arma Reforger)</li>
         <li>Programming (Python, C#)</li>
         <li>Anything related to tech</li>
-        <li><a href="https://pt.wikipedia.org/wiki/Kamov_Ka-50">Kamov KA-52 "Alligator"</a> Attack Heli</li>
+        <li><a href="../html/ka52.html">Kamov KA-52 "Alligator"</a> Attack Heli</li>
         <li>Music</li>
     </ul>
-
 
     <!-- Atualiza idade automaticamente -->
     <script>
