--- a/html/calculadora.html
+++ b/html/calculadora.html
@@ -7,7 +7,7 @@
     <!--Icone-->
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../css/estilo2.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <title>Calculadora</title>
 </head>
