padronização e tradução de linguagens

--- a/html/contatos.html
+++ b/html/contatos.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div class="bg"></div>
-	<h1>Contatos</h1>
-	<h2>Você pode me encontrar nas seguintes plataformas:</h2>
+	<h1>Contacts</h1>
+	<h2>You can reach me on:</h2>
     <ul>
         <li>GitHub: <a target="_blank" href="https://github.com/Hypxwghost">Hypxwghost</a></li>
         <li>Discord: Khall1</li>
