--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -12,23 +12,23 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body onload="carregar()">
-    <div class="bggalaxia"></div>
+<body onload="load()">
+    <div class="bggalaxy"></div>
     <!-- Mensagem de erro caso display de hora e data dar errado -->
     <div id="msg">
-        Algo de errado!
+        Error
     </div>
     <div id="msg2">
-        Algo de errado,msg2
+        Error
     </div>
 
-    <h1>Bem Vindo(a)</h1>
-    <h2>Apenas um lugar p compartilhar sobre mim</h2>
+    <h1>Welcome</h1>
+    <h2>Just a place to share about me</h2>
 
     <nav>
         <p><a href="./html/aboutme.html">About me</a></p>
-        <p><a href="./html/contatos.html">Contatos</a></p>
-        <p><a href="./html/calculadora.html">Calculadora</a></p>
+        <p><a href="./html/contatos.html">Contacts</a></p>
+        <p><a href="./html/calculadora.html">Calculator</a></p>
         <p><a target="_blank" href="https://github.com/Hypxwghost">Github</a></p>
         <!-- <p><a href="velocidade.html" target="blank">Script</a> para testar velocidade e multar vagabundo contra a lei   '-'</p> -->
         <!-- <p><a href="idade.html" target="blank">Verificador</a> de idade</p> -->
